Prevented overflow to the x-axis

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {
+    overflow-x: hidden;
+    font-size: medium;
+}
+
 .canvas {
     width: 500px;
     height: 600px;
